# Halluc

./: .gitignore  .gitmodules  AGENTS.md  README.md  ideal.sh.o5336  models  outputs  pyproject.toml  pyrightconfig.json  requirements.txt  test_grpo_args.py
LLaMA-Factory/: .gitignore
bash/crc/: base.sh  e2e.sh  eval.sh  hf.sh  lm_eval.sh  merge.sh  sft_llama3_gsm8k.sh  sft_qwen3_gsm8k.sh  token_error.sh
bash/delta/: hf.slurm
bash/psu/: eval.slurm  hf.slurm  notify.py  run.slurm
bash/sys/: bashrc.sh  clean_logs.sh  del_env.sh  init_env.sh  install_env_le.sh  install_env_lf.bash  install_env_lf.sh  interact.sh  log_yaml.sh  notify.sh  parse_mode.sh  reset_token.sh
configs/llamafactory/: default.yaml  inference.yaml  merge.yaml  token.yaml  train.yaml
configs/llmhalluc/: backtrack_sft.yaml  dpo.yaml  e2e.yaml  gen.yaml  generation.yaml  grpo.yaml  sft.yaml  token.yaml
configs/lm_eval/: default.yaml  eval.yaml
data/: dataset_info.json  dataset_info.json.bak
docs/: AGENTS.md  CLAUDE.md  ENV.md  experiments.md  hf_training.md  hf_training_plan.md  todo.md  transformers_upgrade.md  unused_variables_analysis.md
docs/agent/: memories.md
docs/agents/: README.md  literature_review.md  memories.md  research_status.md
docs/debug/: sft_discrepancy_analysis.md
docs/dev/: GRPO Implementation.md  (+2 more)
llmhalluc/: e2e.py  hf.py  hf_train.py  lf_train.py  run_cfg.py  run_eval.py  run_exp.py  run_gen.py  run_train.py  test.py
repos/: README.md
scripts/: README.md
unsloth_compiled_cache/: UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothPPOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py
(+167 files in other folders)
